Fix dd vertical button alignment

--- a/core/dd/css/dd_list.less
+++ b/core/dd/css/dd_list.less
@@ -244,7 +244,7 @@ select {
   float: left;
   margin-left: 10px;
   font-weight: bold;
-  line-height: 1.98em;
+  //line-height: 1.98em;
 }
 #tsTreeLOAD .tsHeader .tsHeaderLeft IMG {
   margin-left: 2px;
@@ -398,7 +398,7 @@ table.table_list_ts_used td {
   height: 18px;
   display: inline-block;
   position: relative;
-  vertical-align: top;
+  vertical-align: bottom;
   cursor: pointer;
 }
 .icon_delete {
